--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 sha3 = "0.8.2"
 blake-hash = "0.3.2"
+groestl = "0.8.0"
 byteorder = "1.2"
 skein-hash = "0.3.0"
 digest = "0.8"
