--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["wakiyamap <wakiyamap@gmail.com>"]
 edition = "2018"
 
+license = "MIT"
+description = "Pure rust library in Lyra2, Lyra2RE, Lyra2REv2, Lyra2REv3."
+repository = "https://github.com/wakiyamap/lyra2"
+readme = "README.md"
+keywords = ["lyra2", "Lyra2RE", "Lyra2REv2", "Lyra2REv3"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
