--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,4 +12,6 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: |
+        cargo test --verbose
+        cargo clippy --verbose
