--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ sha3 = "0.9.1"
 blake-hash = "0.4.0"
 groestl = "0.9.0"
 byteorder = "1.2"
-skein-hash = { path = "src/thirdparty/skein" }
+skein-hash = "0.3.1"
 digest = "0.9.0"
