--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ keywords = ["lyra2", "Lyra2RE", "Lyra2REv2", "Lyra2REv3"]
 sha3 = "0.9.1"
 blake-hash = "0.4.0"
 groestl = "0.9.0"
-byteorder = "1.2"
+byteorder = { version = "1.4.3", default-features = false }
 skein-hash = "0.3.1"
 digest = "0.9.0"
